# HCC

./: .gitignore  HCC.cabal  LICENSE  README.md
lib/HCC/: AST.hs  Gen.hs  Lexer.hs  Parser.hs  Token.hs
src/: Main.hs
tests/: tests.hs
