name:                HCC
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Robert Stefanic
maintainer:          me@robertstefanic.com
copyright:           2018 Robert Stefanic
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
    hs-source-dirs:    
        lib

    default-language:  
        Haskell2010

    Ghc-options:       
        -Wall

    exposed-modules:
        HCC.AST,
        HCC.Gen,
        HCC.Lexer,
        HCC.Parser,
        HCC.Token

    build-depends:
        base >= 4.7 && < 5,
        bytestring,
        mtl,
        parsec,
        text

executable HCC
    hs-source-dirs:      
        src

    main-is:             
        Main.hs

    default-language:    
        Haskell2010

    build-depends:       
        base >= 4.7 && < 5,
        directory,
        HCC,
        optparse-applicative,
        text

test-suite tests
    ghc-options:
        -Wall -fno-warn-orphans
    
    type:
        exitcode-stdio-1.0

    other-modules:
        HCC.AST,
        HCC.Gen,
        HCC.Lexer,
        HCC.Parser,
        HCC.Token

    main-is:
        tests.hs
    
    hs-source-dirs:
        lib,
        tests

    build-depends:
        base >= 4.7 && < 5,
        hspec,
        mtl,
        parsec

   default-language:
        Haskell2010
